--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
 asgiref==3.8.1
+chardet==5.2.0
+cssselect2==0.7.0
 Django==5.0.6
+django-appconf==1.0.6
 django-bootstrap-form==3.4
 django-ckeditor==6.7.1
 django-colorfield==0.11.0
+django-filer==3.2.0
 django-js-asset==2.2.0
+django-libs==2.0.3
+django-polymorphic==3.1.0
+django-select2==8.2.1
+easy-thumbnails==2.9
+holidays==0.56
+lxml==5.3.0
 pillow==10.4.0
+python-dateutil==2.9.0.post0
+reportlab==4.2.2
+six==1.16.0
 sqlparse==0.5.0
+svglib==1.5.1
+tinycss2==1.3.0
 typing_extensions==4.12.2
+webencodings==0.5.1
